Fixed not covered background

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body{
 body{
   height: 100%;
   background: url('img/bg6.jpg') center no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-color: black;
   font-family: Roboto, sans-serif;
  
